--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -19,6 +19,7 @@ bears$MONTH<- as.factor(bears$MONTH)
 ```
 
 ## Model LENGTH ~ NECK  this is an example  
+We are going to compute regression models finding one regression model that does the best job in predicting the bear length and its correspondence to the bears neck size, age, head width and head length.
 
 ```{r}
 simp <- lm(LENGTH~NECK,data=bears)
@@ -26,7 +27,14 @@ plot(LENGTH~NECK,data=bears)
 abline(simp)
 summary.lm(simp)
 ```
-
+the adjusted r square that is the largest and is best. The neck size 0.7476.
 
 ## Compare all models that predict LENGTH other than NECK. Then order them from worst to best by its value of Adjusted-Rsquared (bigger is better), or by RSE (residual standard error) where smaller is better. 
 
+```{r}
+simp <- lm(LENGTH~HEADLEN,data=bears)
+plot(LENGTH~HEADLEN,data=bears)
+abline(simp)
+summary.lm(simp)
+```
+The adjusted R- Squared for Head length is 0.8434.
